--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~9.0.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "json2typescript": "^1.2.5",
+    "dayjs": "^1.8.21"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.4",
